--- a/lab5/quanlytaikhoan_3layer/src/GUI/UserGUI.form
+++ b/lab5/quanlytaikhoan_3layer/src/GUI/UserGUI.form
@@ -244,6 +244,10 @@
           <Dimension value="[100, 25]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnInsertMouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInsertActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnUpdate">
       <Properties>
