--- a/lab5/quanlytaikhoan_3layer/src/GUI/UserGUI.form
+++ b/lab5/quanlytaikhoan_3layer/src/GUI/UserGUI.form
@@ -279,6 +279,9 @@
           <Dimension value="[100, 25]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDeleteActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
