--- a/lab5/QuanLyPhongKham/src/GUI/DatLichKhamGUI.form
+++ b/lab5/QuanLyPhongKham/src/GUI/DatLichKhamGUI.form
@@ -218,9 +218,8 @@
               <Font name="Segoe UI" size="12" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
-                <StringItem index="0" value="Nam"/>
-                <StringItem index="1" value="N&#x1eef;"/>
+              <StringArray count="1">
+                <StringItem index="0" value="Ch&#x1ecd;n b&#xe1;c s&#x129;"/>
               </StringArray>
             </Property>
           </Properties>
