--- a/lab5/QuanLyPhongKham/src/GUI/ChiTietKhamGUI.form
+++ b/lab5/QuanLyPhongKham/src/GUI/ChiTietKhamGUI.form
@@ -128,7 +128,7 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="lblNgayKham" min="-2" pref="103" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="dtcNgayKham" min="-2" pref="135" max="-2" attributes="0"/>
+                                      <Component id="datNgayKham" min="-2" pref="135" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -162,7 +162,7 @@
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Component id="lblNgayKham" alignment="1" min="-2" max="-2" attributes="0"/>
-                              <Component id="dtcNgayKham" min="-2" max="-2" attributes="0"/>
+                              <Component id="datNgayKham" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -294,16 +294,22 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbbBenhNhanActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="com.toedter.calendar.JDateChooser" name="dtcNgayKham">
+        <Component class="com.toedter.calendar.JDateChooser" name="datNgayKham">
           <Properties>
             <Property name="minSelectableDate" type="java.util.Date" editor="org.netbeans.beaninfo.editors.DateEditor">
               <SerializedValue value="-84,-19,0,5,115,114,0,14,106,97,118,97,46,117,116,105,108,46,68,97,116,101,104,106,-127,1,75,89,116,25,3,0,0,120,112,119,8,-1,-1,-57,124,-30,61,-34,-72,120"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="datNgayKhamPropertyChange"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtYeuCauKham">
         </Component>
@@ -327,6 +333,9 @@
                   </Table>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblDichVuMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -358,6 +367,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Th&#xea;m"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThemActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
