--- a/lab5/QuanLyPhongKham/src/GUI/ChiTietKhamGUI.form
+++ b/lab5/QuanLyPhongKham/src/GUI/ChiTietKhamGUI.form
@@ -324,6 +324,9 @@
           <SubComponents>
             <Component class="javax.swing.JTable" name="tblDichVu">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="11" style="0"/>
+                </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="4">
                     <Column editable="true" title="Title 1" type="java.lang.Object"/>
@@ -348,6 +351,9 @@
           <SubComponents>
             <Component class="javax.swing.JTable" name="tblDichVuDuocChon">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="11" style="0"/>
+                </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="4">
                     <Column editable="true" title="Title 1" type="java.lang.Object"/>
