--- a/lab5/QuanLyPhongKham/src/GUI/ThanhToanGUI.form
+++ b/lab5/QuanLyPhongKham/src/GUI/ThanhToanGUI.form
@@ -264,6 +264,9 @@
           </Properties>
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="datNgayKham">
+          <Events>
+            <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="datNgayKhamPropertyChange"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
