--- a/lab5/QuanLyPhongKham/src/GUI/ThongKeGUI.form
+++ b/lab5/QuanLyPhongKham/src/GUI/ThongKeGUI.form
@@ -133,6 +133,9 @@
         <Component class="com.toedter.calendar.JDateChooser" name="datTuNgay">
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="datDenNgay">
+          <Events>
+            <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="datDenNgayPropertyChange"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="cbbLoaiBaoCao">
           <Properties>
